<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GrammarBook</string>
    <string name="action_settings">Settings</string>
    <string name="add_grammar">Add Grammar</string>
    <string name="my_grammar_list">My Grammar List</string>
    <string name="test">Test</string>
    <string name="setting">Settings</string>
    <string name="title_activity_edit_grammar">Edit Grammar</string>
    <string name="title_activity_grammar_list">My Grammar List</string>
    <string name="title_activity_grammar_test">Grammar Test</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_grammar_detail">Details of grammar</string>
    <string name="label_grammar">Grammar</string>
    <string name="label_meaning">Meaning</string>
    <string name="lebel_type">Type</string>
    <string name="hint_label_grammar">input grammar</string>
    <string name="hint_label_meanning">meaning of grammar that you inputted.</string>
    <string name="btn_label_add">Add</string>
    <string name="btn_label_remove">Remove</string>
    <string name="action_done">Done</string>
    <string name="btn_label_minus">-</string>
    <string name="btn_label_check">Check</string>
    <string name="btn_label_play">Play</string>
    <string name="msg_init_tts_success">TTS initializing sucessed</string>
    <string name="msg_init_tts_fail">TTS initializing failed</string>
    <string name="pref_label_load_data">Load grammars from file(*.txt)</string>
    <string name="pref_label_export_data">Export data to File(grammars.txt)</string>
    <string name="pref_label_reset">Reset grammar data</string>
    <string name="pref_header_label_general">General</string>
    <string name="pref_label_max_meaning_count">Max line count</string>
    <string name="pref_header_label_grammar_edit">Grammar edit preference</string>
    <string name="pref_label_test_count">Test count</string>
    <string name="pref_label_test_example_count">Example count of Objective test</string>
    <string name="pref_header_label_test">Test preference</string>
    <string name="title_activity_grammar_preference">GrammarPreferenceActivity</string>
    <string name="msg_meaning_row_full">Can not add meaning row any more.</string>
    <string name="msg_load_data_done">Data load from File finished.</string>
    <string name="msg_export_data_done">Export Data to File finished.</string>
    <string name="msg_progress_loading_data">Loading data from file.</string>
    <string name="msg_progress_exporting_data">Exporting data to file.</string>
    <string name="msg_no_grammar_in_edit">Please input grammar.</string>
    <string name="btn_label_ok">Ok</string>
    <string name="type_label_test_objective">Objective</string>
    <string name="type_label_test_subjective">Subjective</string>
    <string name="btn_label_cancel">Cancel</string>
    <string name="btn_label_start">Start</string>
    <string name="type_label_question_meaning">Match eaning</string>
    <string name="type_label_question_grammar">Match grammar</string>
    <string name="radio_group_label_type_test">Type of Test</string>
    <string name="radio_group_label_type_question">Type of question</string>
    <string name="btn_label_completed">Complete</string>
    <string name="label_score">Score</string>
    <string name="label_corrrect">Correct count</string>
    <string name="label_incorrect">Incorrect count</string>
    <string name="label_grammar_type_noun">Noun</string>
    <string name="label_grammar_type_verb">Verb</string>
    <string name="label_grammar_type_adjective">Adjective</string>
    <string name="label_grammar_type_adverb">Adverb</string>
    <string name="label_grammar_type_preposition">Preposition</string>
    <string name="label_grammar_type_idiom">Idiom</string>
    <string name="type_unknown">Unknown</string>
    <string name="action_delete">Delete</string>
    <string name="action_edit">Edit</string>
    <string name="action_add">Add</string>
    <string name="action_detail">Details</string>
    <string name="msg_incorrect">Incorrect answer. Please try again.</string>
    <string name="msg_progress_generate_result">Generating results.</string>
    <string name="section_test_result_number">No.</string>
    <string name="section_test_result_question">Question</string>
    <string name="section_test_result_answered">Answerd</string>
    <string name="section_test_result_correction">Correction</string>
    <string name="msg_use_saved_dialog">There are already Test which is not finished.\n Do you want to continue?</string>
    <string name="btn_label_yes">Yes</string>
    <string name="btn_label_no">No</string>
    <string name="title_activity_test_list">TestListActivity</string>
    <string name="msg_delete_grammar_dialog">Do you really want to delete this grammar?</string>

</resources>
