<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="20dp"
    android:background="#7F7F7F"
    android:orientation="horizontal" >
    
    <TextView
        android:layout_width="30dp"
        android:layout_height="match_parent"
        android:gravity="center"
        android:singleLine="true"
        android:text="@string/section_test_result_number" />
    
    <LinearLayout 
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:background="#000000" />
    
    <TextView
        android:layout_width="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:singleLine="true"
        android:layout_height="match_parent"
        android:text="@string/section_test_result_question" />
    
    <LinearLayout 
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:background="#000000" />
    
    <TextView
        android:layout_width="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:singleLine="true"
        android:layout_height="match_parent"
        android:text="@string/section_test_result_answered" />
    
    <LinearLayout 
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:background="#000000" />
    
    <TextView
        android:layout_width="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:singleLine="true"
        android:layout_height="match_parent"
        android:text="@string/section_test_result_correction" />

</LinearLayout>
