<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.loyid.grammarbook.PrepareTestFragment" >

    <LinearLayout 
        android:id="@+id/radio_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
        <RadioGroup 
            android:id="@+id/radio_group_test_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:checkedButton="@+id/radio_type_objective">
            
            <RadioButton
                android:id="@id/radio_type_objective"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/type_label_test_objective" />

            <RadioButton
                android:id="@+id/radiotype_subjective"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/type_label_test_subjective" />
            
        </RadioGroup>
        
        <RadioGroup 
            android:id="@+id/radio_group_question_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:checkedButton="@+id/radio_type_meaning" >

            <RadioButton
                android:id="@id/radio_type_meaning"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/type_label_question_meaning" />

            <RadioButton
                android:id="@+id/radio_type_grammar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/type_label_question_grammar" />
            
        </RadioGroup>
        
	</LinearLayout>

    <Button
        android:id="@+id/btn_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/radio_container"
        android:layout_marginTop="40dp"
        android:text="@string/btn_label_start" />
    
</RelativeLayout>

