<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.loyid.grammarbook.MainActivity" >

    <Button
        android:id="@+id/btn_main_add_grammar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="72dp"
        android:layout_marginTop="34dp"
        android:onClick="onMainButtonClick"
        android:text="@string/add_grammar" />

    <Button
        android:id="@+id/btn_main_my_grammar_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/btn_main_add_grammar"
        android:layout_marginLeft="72dp"
        android:onClick="onMainButtonClick"
        android:text="@string/my_grammar_list" />

    <Button
        android:id="@+id/btn_main_test"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/btn_main_my_grammar_list"
        android:layout_marginLeft="72dp"
        android:onClick="onMainButtonClick"
        android:text="@string/test" />

    <Button
        android:id="@+id/btn_main_setting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/btn_main_test"
        android:layout_marginLeft="72dp"
        android:onClick="onMainButtonClick"
        android:text="@string/setting" />

</RelativeLayout>