<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.loyid.grammarbook.EditGrammarActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/label_grammar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_grammar" />
        
        <EditText
            android:id="@+id/edit_grammar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/hint_label_grammar" >

    	 </EditText>
    </LinearLayout>

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
            
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                
                <TextView
                    android:id="@+id/label_type"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/lebel_type" />
                
                <TextView
                    android:id="@+id/label_meaning"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_meaning" />
                
            </LinearLayout>
            
            <LinearLayout
                android:id="@+id/added_item_list"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                
                <include
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    layout="@layout/added_item_layout"/>
                
            </LinearLayout>
            
            <Button
                android:id="@+id/btn_add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_label_add"
                android:onClick="onAddButtonClick" />
            
        </LinearLayout>
        
    </ScrollView>

 </LinearLayout>